--- a/应用文档/账密文档/账户及密码.md
+++ b/应用文档/账密文档/账户及密码.md
@@ -296,11 +296,43 @@ innovim
 what.0414
 # 邮箱
 2244255266@qq.com
-# 手机令牌
-R11157
+# Steam令牌
+R99661
 
 # 最近查看过 删除
 点击(社区右侧)昵称 → 活动 → 我的活动 → 删除
+# 您所在的地区目前不提供此物品
+1) 使用VPN(如：香港节点) → 添加一款游戏到购物车
+2) 商店 → 购物车 → 国家/地区 [香港(HKS)]
+3) 支付
+4) 或者不支付，购物车保留一个游戏，每一次都重试 2 步骤
+```
+
+### [我的账户](https://help.steampowered.com/zh-cn/wizard/HelpWithAccount)
+
+```markdown
+# 帮助 → Steam 客服 → 我的账户
+-- 相关设置
+管理账户明细
+Steam 令牌
+您 Steam 帐户的相关数据
+...
+```
+
+### [商店偏好](https://store.steampowered.com/account/preferences)
+
+```markdown
+# 只有非中国(大陆)地区
+内容筛选 [√]
+```
+
+![image-20250517222624090](./Emulator/Game/详细文件/imgs/image-20250517222624090.png)
+
+### [最近查看过](https://store.steampowered.com/account/cookiepreferences)
+
+```markdown
+# Valve 的自定义内容 Cookie
+recentapps 关|开
 ```
 
 ## # [RIOT](https://www.riotgames.com)
