--- a/应用文档/账密文档/账户及密码.md
+++ b/应用文档/账密文档/账户及密码.md
@@ -322,11 +322,11 @@ Steam 令牌
 ### [商店偏好](https://store.steampowered.com/account/preferences)
 
 ```markdown
-# 只有非中国(大陆)地区
-内容筛选 [√]
+# 只有非中国(大陆)地区 → 才会显示5行内容
+全部内容筛选 [√]
 ```
 
-![image-20250517222624090](./Emulator/Game/详细文件/imgs/image-20250517222624090.png)
+![image-20250517222624090](./Emulator/Game/详细文件/imgs/Steam/image-20250517222624090.png)
 
 ### [最近查看过](https://store.steampowered.com/account/cookiepreferences)
 
@@ -518,6 +518,8 @@ git status -s
 git add .
 git commit -m "Y2024M12D04"
 git push
+# 注意(有新增时，add 参数需要变化)
+git add -A
 
 # husky > pre-commit (node vxx.xx.x)
 git commit -m "Y2025M01D30" --no-verify
