--- a/应用文档/账密文档/Emulator/常用模拟器.md
+++ b/应用文档/账密文档/Emulator/常用模拟器.md
@@ -163,7 +163,7 @@ https://mt2.cn/download
 
 # 游戏整理
 
-<a href="Game\ButterFly.md">ButterFly</a>
+<a href="Game\Detail.md">Detail</a>
 
 ```markdown
 # 说明
