--- a/应用文档/02_问题收集/日常小结.md
+++ b/应用文档/02_问题收集/日常小结.md
@@ -5780,6 +5780,15 @@ cd C:\Tools\ViVeTool-v0.3.2
          vivetool /query /id:42038001
 ```
 
+### Windows Denfnder 恢复
+
+```markdown
+设置 | 隐私和安全 | Windows 安全中心
+                                 → Windows 安全中心 → 保护历史记录 → 已[阻止/隔离]威胁 → 操作 → 还原
+```
+
+![image-20250610003430902](../imgs/02/Summary/Windows/image-20250610003430902.png)
+
 ### 应用卸载
 
 ````markdown
