--- a/应用文档/01_工具网站/常用网站.md
+++ b/应用文档/01_工具网站/常用网站.md
@@ -3751,7 +3751,8 @@ e39639bdebc320f9bd8e
 https://z008.blogspot.com/2023/10/ZV2.html
 
 # 代理软件客户端
-https://github.com/2dust/v2rayN/releases/tag/7.10.4
+https://github.com/2dust/v2rayN/releases/tag/7.12.6
+https://github.com/2dust/v2rayN/releases/tag/7.10.5
 
 # 下载
 v2rayN-windows-64-With-Core.zip | v2rayN-windows-64-SelfContained-With-Core.7z | 
@@ -3805,29 +3806,29 @@ v2rayN-windows-64-SelfContained.zip
 # 注意
 所有Cloudflare项目 都转移到了 linhanxavi@gmail.com
 
-# Author(6Kmfi6HP)	DNS(US.KG & DynV6)	Email(linhanxavi@gmail.com)
+# Author(6Kmfi6HP)	DNS(US.KG & DynV6)		Email(linhanxavi@gmail.com)
 https://6kw.weski.dpdns.org/6d68f9e6-07f1-4d5e-856d-a0b61cf09d14
 https://6kp.viskx.dynv6.net/bestip/5ef1ef0f-fec5-4881-a7c9-b918339391ac
 
-# Author(cmliu)		DNS(US.KG)	Email(linhanxavi@gmail.com)
+# Author(cmliu)		DNS(US.KG)				Email(linhanxavi@gmail.com)
 -- cml_vs
-https://cmv.weskx.dpdns.org/cmlgh?proxyip=ProxyIP.SG.CMLiussss.net
+https://cmv.weskx.dpdns.org/cmlgh?proxyip=ProxyIP.Oracle.CMLiussss.net
 -- cml_tj
-https://cmt.wesky.dpdns.org/cmlep?proxyip=ProxyIP.KR.CMLiussss.net
+https://cmt.wesky.dpdns.org/cmlep?proxyip=ProxyIP.Vultr.CMLiussss.net
 
-# Author(ygkkk)		DNS(US.KG & DynV6)	Email(linhanxavi@gmail.com)
+# Author(ygkkk)		DNS(US.KG & DynV6)		Email(linhanxavi@gmail.com)
 https://ygv.weski.dpdns.org/e87be5d7-a582-440f-a8ff-f4c93a2d2bcb/pty
 https://ygt.viskx.dynv6.net/qwe1234/pty
 
 # By Author(cmliu)
 -- Cmliu_Vless
-https://cmv.weskx.dpdns.org/cmlgh?sub=SUB.CMLiussss.net&proxyip=tw.yutian.nyc.mn
+https://cmv.weskx.dpdns.org/cmlgh?sub=SUB.CMLiussss.net&proxyip=ProxyIP.Multacom.CMLiussss.net
 -- 天诚_Trojan
-https://alvless.filegear-sg.me/sub?host=cmt.wesky.dpdns.org&password=cmlep&path=%2F%3Fed%3D2560%26proxyip%3Dproxyip.tp27231.hbmc.net
+https://altrojan.sosorg.nyc.mn/sub?host=cmt.wesky.dpdns.org&password=cmlep&path=%2F%3Fed%3D2560%26proxyip%3DProxyIP.DigitalOcean.CMLiussss.net
 -- Moist_Vless
-https://cmv.weskx.dpdns.org/cmlgh?sub=owo.o00o.ooo&proxyip=ts.hpc.tw
+https://cmv.weskx.dpdns.org/cmlgh?sub=owo.o00o.ooo&proxyip=ProxyIP.KR.CMLiussss.net
 -- Moist_Trojan
-https://cmt.wesky.dpdns.org/cmlep?sub=owo.o00o.ooo&proxyip=proxyip.tp27231.hbmc.net
+https://cmt.wesky.dpdns.org/cmlep?sub=owo.o00o.ooo&proxyip=ProxyIP.SG.CMLiussss.net
 -- sos_cml_vls
 https://SOS.CMLiussss.net/auto
 
@@ -3839,14 +3840,17 @@ https://opt.sosorg.dpdns.org/sub?password=cmlep&security=tls&sni=cmt.wesky.dpdns
 
 # 通用DNS
 ts.hpc.tw
+kr.tp50000.netlib.re
 proxyip.tp27231.hbmc.net
+hk.cf.zhetengsha.eu.org
 # 特定DNS
+-- ygkkk
+s14.serv00.com:15661
 -- cmliu
 ProxyIP.JP.CMLiussss.net | ProxyIP.US.CMLiussss.net | ...
 tw.yutian.nyc.mn
--- ygkkk
-s14.serv00.com:15661
 # 已挂
+-- cmliu
 ProxyIP.HK.CMLiussss.net
 
 # 69云机场
