--- a/应用文档/账密文档/Emulator/常用模拟器.md
+++ b/应用文档/账密文档/Emulator/常用模拟器.md
@@ -2,13 +2,15 @@
 
 ## # [MuMu模拟器](https://mumu.163.com)
 
-往期版本
-
-https://mumu.163.com/update
-
 ```markdown
 # 作用
 模拟 手机应用信息，可虚拟定位，下载企业微信打卡
+
+# 往期版本
+https://mumu.163.com/update
+
+# 开启Root
+☰ → 设置中心 → 其他 → [√] 开启手机Root权限
 ```
 
 ## # [小鸡模拟器](https://www.xiaoji001.com)
@@ -136,6 +138,24 @@ Steam Link
 
 https://apkpure.com/steam-link/com.valvesoftware.steamlink
 
+# 修改器
+
+## # [cheatengine](https://www.cheatengine.org)
+
+```markdown
+# 汉化设置
+点击下载  Chinese Simplified translation files (ch_CN)
+解压放入  Cheat Engine安装目录\languages
+切换语言  Edit | Settings | Languages
+```
+
+## # [gameguardian](https://gameguardian.net)
+
+```markdown
+# 下载地址
+https://gameguardian.net/download
+```
+
 # 解压缩
 
 ## # [ZArchiver](https://www.zarchiver.pro)
@@ -150,15 +170,6 @@ https://www.zarchiver.pro/zarchiver-download
 
 ```tex
 https://mt2.cn/download
-```
-
-# [作弊引擎](https://www.cheatengine.org)
-
-```markdown
-# 汉化设置
-点击下载  Chinese Simplified translation files (ch_CN)
-解压放入  Cheat Engine安装目录\languages
-切换语言  Edit | Settings | Languages
 ```
 
 # 游戏整理
