--- a/应用文档/01_工具网站/常用工具.md
+++ b/应用文档/01_工具网站/常用工具.md
@@ -682,10 +682,10 @@ IDEA highlighting level → All Problems	检查所有error/warning
 
 [推荐整理]: https://zhuanlan.zhihu.com/p/391467740
 
-安装目录
-
-```tex
-%LocalAppData%\JetBrains  →  IntelliJIdeaxxxx.x\plugins
+```markdown
+# 安装目录
+%LocalAppData%\JetBrains
+                          →  IntelliJIdeaxxxx.x\plugins
 ```
 
 #### * Plugins 安装
@@ -1040,7 +1040,9 @@ Editor | General | Code Completion → 取消勾选：Match case
 ##### * 取消快捷注释在首行
 
 ```tex
-Editor | Code Style | Java | Code Generation → 取消勾选：Line comment at first column 和 Block comment at first column
+Editor | Code Style | Java | Code Generation → 取消勾选
+                                                       [×] Line comment at first column
+                                                       [×] Block comment at first column
 ```
 
 ![image-20210513182150270](../imgs/01/Tools/IDEA/image-20210513182150270.png)
@@ -3098,12 +3100,9 @@ https://www.todesk.com/download.html
 
 ## 【生产力】工具箱
 
-### # He3
+### # [He3](https://he3.app)
 
 ```markdown
-# 官网
-https://he3.app
-
 # 中文官网
 https://he3app.com/zh
 
@@ -3126,12 +3125,9 @@ JSON格式化        JSON转XML      XML转JSON
 JSON转Java Bean  JSON转SQL模式   JSON表格转SQL
 ```
 
-### # uTools
+### # [uTools](https://u.tools)
 
 ```markdown
-# 官网
-https://u.tools
-
 # 登录
 微信授权
 
@@ -3165,7 +3161,11 @@ https://github.com/lblblong/nat-utools
 ## 【Google Chrome】
 
 ```markdown
+# 浏览器工具
 https://www.google.com/chrome/browser-tools
+
+# 缓存文件
+%LocalAppData%\Google\Chrome
 ```
 
 ### # 前端调试
@@ -3395,9 +3395,9 @@ https://www.firefox.com
 https://www.microsoft.com/edge
 ```
 
-## 【浏览器-插件】
+## 【插件】
 
-### # 翻译插件
+### # 翻译工具
 
 ```markdown
 # 沉浸式翻译 (v1.12.8) → GitHub资源
