--- a/应用文档/01_工具网站/常用网站.md
+++ b/应用文档/01_工具网站/常用网站.md
@@ -351,6 +351,20 @@ git branch -d 分支名称
 git push origin --delete 分支名称
 ```
 
+#### * 差异比较
+
+```bash
+# 参数介绍
+git diff --cached [<path>...]		比较暂存区与最新本地版本库（本地库中最近一次commit的内容）
+git diff HEAD [<path>...]			比较工作区与最新本地版本库。如果HEAD指向的是master分支，那么HEAD还可以换成master
+git diff commit-id [<path>...]		比较工作区与指定commit-id的差异　　　　　　
+git diff --cached [<commit-id>] [<path>...]		比较暂存区与指定commit-id的差异
+git diff [<commit-id>] [<commit-id>]			比较两个commit-id之间的差异
+
+# 不加参数 → [默认]比较[工作区]与[暂存区]
+git diff "应用文档/06_学习笔记/MySql/sql_optimization/sentences/index/ExplainIntroduce.sql"
+```
+
 ### # 保存账密
 
 在 git bash 执行如下命令，再输入账号密码即可
