--- a/应用文档/账密文档/Emulator/常用模拟器.md
+++ b/应用文档/账密文档/Emulator/常用模拟器.md
@@ -3,14 +3,25 @@
 ## # [MuMu模拟器](https://mumu.163.com)
 
 ```markdown
-# 作用
-模拟 手机应用信息，可虚拟定位，下载企业微信打卡
-
 # 往期版本
 https://mumu.163.com/update
 
 # 开启Root
-☰ → 设置中心 → 其他 → [√] 开启手机Root权限
+☰ | 设置中心 | 基本设置 | root权限 → [√] 开启root权限
+☰ | 设置中心 | 其他 | Root权限 → [√] 开启手机Root权限
+
+# 作用
+模拟 手机应用信息，可虚拟定位，下载企业微信打卡
+
+# 文件位置
+%UserProfile%\Documents\MuMu共享文件夹
+```
+
+## # [雷电模拟器](https://www.ldmnq.com)
+
+```markdown
+# 开启Root
+☰ | 设置中心 | 其他 | Root权限 → [√]
 ```
 
 ## # [小鸡模拟器](https://www.xiaoji001.com)
@@ -154,6 +165,14 @@ https://apkpure.com/steam-link/com.valvesoftware.steamlink
 ```markdown
 # 下载地址
 https://gameguardian.net/download
+
+# noroot
+https://gameguardian.net/noroot
+# 可选项
+点击 Parallel Space, VirtualXposed, Parallel Space Lite, GO multiple, 2Face
+找到 GameGuardian work without root → Download APK
+                                                  → Parallel_Space_x.x.x_gg_signed.apk
+                                                  → VirtualXposed_x.x.x.x_for_GameGuardian_32bit.apk
 ```
 
 # 解压缩
