--- a/应用文档/02_问题收集/日常小结.md
+++ b/应用文档/02_问题收集/日常小结.md
@@ -5934,6 +5934,9 @@ cd %TMP%
 %SystemRoot%\system32
 -- C:\Windows\System32
 
+# IP地址-域名解析 → hosts 文件
+C:\Windows\System32\drivers\etc
+
 # 查看所有文件，包括隐藏文件
 dir /a
 # 删除文件
