--- a/应用文档/账密文档/账户及密码.md
+++ b/应用文档/账密文档/账户及密码.md
@@ -184,11 +184,11 @@ Xw.2244255266
 
 ```markdown
 # 官网
-https://account.microsoft.com
+https://razerid.razer.com
 # Razer ID
 weiskey
 # 密码
-simple.0121
+Simple.0121
 # 邮箱
 2244255266@qq.com
 # 手机 
