--- a/应用文档/01_工具网站/常用网站.md
+++ b/应用文档/01_工具网站/常用网站.md
@@ -1,4 +1,4 @@
-# IT开发网站
+# 代码托管
 
 ## 【[Git](https://git-scm.com)】官网
 
@@ -631,6 +631,8 @@ cmd 进入被锁的文件夹
 
 ![image-20210926123956330](../imgs/01/Website/TortoiseSVN/image-20210926123956330.png)
 
+# 公司/社区
+
 ## 【[Oracle](https://www.oracle.com/index.html)】官网
 
 ```markdown
@@ -641,7 +643,7 @@ https://www.oracle.com/downloads
 https://edelivery.oracle.com/osdc/faces/SoftwareDelivery
 ```
 
-### # <a href="../document/01/Website/OracleDatabase.md">OracleDatabase</a>
+<a href="../document/01/Website/OracleDatabase.md">安装步骤</a>
 
 ### # [JDK](https://www.oracle.com/java)
 
@@ -753,6 +755,29 @@ https://repo1.maven.org/maven2
 3) 找到【Path】，点击【编辑】→【新建：%MAVEN_HOME%\bin】
 ```
 
+### # [Tomcat](https://tomcat.apache.org)
+
+#### * 下载地址
+
+```markdown
+https://downloads.apache.org/tomcat
+
+# 往期版本
+https://tomcat.apache.org/oldnews.html
+```
+
+#### * 性能调优
+
+```markdown
+进入Tomcat首页，在 [Documentation] 下面，点击 [Tomcat x]，如 [Tomcat 9.0]
+  进入 https://tomcat.apache.org/tomcat-9.0-doc/index.html
+在 [Reference] 下面，点击 [Configuration]
+  进入 https://tomcat.apache.org/tomcat-9.0-doc/config/index.html
+在 [Connectors] 下面，点击 [HTTP/1.1] 或 [HTTP/2]
+  进入 https://tomcat.apache.org/tomcat-9.0-doc/config/http.html
+      https://tomcat.apache.org/tomcat-9.0-doc/config/http2.html
+```
+
 ### # [Thrift](https://thrift.apache.org/docs/install)
 
 ```markdown
@@ -803,29 +828,6 @@ thrift -gen js:node user.thrift
 thrift -gen java -o ./target user.thrift
 ```
 
-### # [Tomcat](https://tomcat.apache.org)
-
-#### * 下载地址
-
-```markdown
-https://downloads.apache.org/tomcat
-
-# 往期版本
-https://tomcat.apache.org/oldnews.html
-```
-
-#### * 性能调优
-
-```markdown
-进入Tomcat首页，在 [Documentation] 下面，点击 [Tomcat x]，如 [Tomcat 9.0]
-  进入 https://tomcat.apache.org/tomcat-9.0-doc/index.html
-在 [Reference] 下面，点击 [Configuration]
-  进入 https://tomcat.apache.org/tomcat-9.0-doc/config/index.html
-在 [Connectors] 下面，点击 [HTTP/1.1] 或 [HTTP/2]
-  进入 https://tomcat.apache.org/tomcat-9.0-doc/config/http.html
-      https://tomcat.apache.org/tomcat-9.0-doc/config/http2.html
-```
-
 ### # [Dubbo](https://dubbo.apache.org) RPC服务框架
 
 #### * 版本网址
@@ -858,6 +860,21 @@ https://dubbo.apache.org/zh/docs/v3.0/references/configuration/api
 https://dubbo.apache.org/zh/docs/v2.7/user/configuration/api
 ```
 
+### # FreeMarker
+
+```markdown
+# 英文官网
+https://freemarker.apache.org
+# 中文官网
+http://freemarker.foofun.cn
+```
+
+#### # 模板 + 数据模型 = 输出
+
+```tex
+http://freemarker.foofun.cn/dgui_quickstart_basics.html
+```
+
 ### # [Kafka](https://kafka.apache.org) 流处理组件
 
 ```markdown
@@ -888,6 +905,325 @@ https://shardingsphere.apache.org/document/5.2.1/cn/overview
 	密码：what.0414
 	邮箱：2244255266@qq.com
 ```
+
+## 【[Google](https://www.google.com)】官网
+
+### # 相关产品
+
+```markdown
+https://about.google/products
+```
+
+### # [Gradle](https://gradle.org)
+
+```markdown
+# 往期版本
+https://gradle.org/releases
+
+# 官方推荐版本 gradle-6.9.2-all.zip
+https://services.gradle.org/distributions
+
+# 国内镜像
+https://mirrors.cloud.tencent.com/gradle
+https://mirrors.aliyun.com/gradle
+```
+
+#### * Spring源码下载与编译
+
+```markdown
+# 参考网址
+https://blog.csdn.net/IAIMY/article/details/128455277
+https://blog.csdn.net/weixin_45031612/article/details/125590396
+
+# 源码地址
+https://gitee.com/dadudu1024/spring-framework-5.3.10
+```
+
+#### * Gradle下载库速度过慢
+
+```markdown
+https://blog.csdn.net/qq_45297578/article/details/119053164
+https://blog.csdn.net/qq_22744093/article/details/132755350
+```
+
+编辑系统环境变量
+
+```tex
+变量名  GRADLE_USER_HOME            (固定写法)
+变量值  E:\DevDoc\maven\repository  (Maven本地仓库地址)
+```
+
+修改 gradle-wrapper.properties 文件
+
+```properties
+distributionBase=GRADLE_USER_HOME
+distributionPath=wrapper/dists
+#distributionUrl=https\://services.gradle.org/distributions/gradle-6.9.2-bin.zip
+distributionUrl=https\://mirrors.cloud.tencent.com/gradle/gradle-6.9.2-bin.zip
+#distributionUrl=file:///E:/DevDoc/aaa_packages/gradle-6.9.2-all.zip
+zipStoreBase=GRADLE_USER_HOME
+zipStorePath=wrapper/dists
+```
+
+使用国内镜像站点
+
+```groovy
+// build.gradle
+repositories {
+	mavenLocal() // 指定使用maven本地仓库，而本地仓库在配置maven时setting文件指定的仓库位置
+	maven { url "https://maven.aliyun.com/repository/public" } // 阿里云镜像
+	maven { url "https://maven.aliyun.com/repository/central" }
+	mavenCentral() // 这是Maven的中央仓库，无需配置，直接声明就可以使用
+	maven { url "https://repo.spring.io/libs-spring-framework-build" }
+}
+
+// settings.gradle
+repositories {
+    maven { url "https://maven.aliyun.com/repository/public" } // 阿里云镜像
+    maven { url "https://maven.aliyun.com/repository/central" }
+    gradlePluginPortal()
+    maven { url 'https://repo.spring.io/plugins-release' }
+}
+```
+
+增加Gradle的[线程数]或者[连接超时时间]
+
+```properties
+# gradle.properties
+version=5.3.10-SNAPSHOT
+org.gradle.jvmargs=-Xmx1536m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -noverify -Dfile.encoding=UTF-8 -Duser.country=CN -Duser.language=zh -Duser.variant
+org.gradle.caching=true
+org.gradle.parallel=true
+kotlin.stdlib.default.dependency=false
+```
+
+## 【Nexus】仓库管理
+
+```markdown
+# 3.x 版本
+https://www.sonatype.com/products/sonatype-nexus-oss-download
+
+# 2.x 版本
+https://help.sonatype.com/repomanager2/download
+
+自定义私服网址
+http://localhost:8888/nexus
+```
+
+## 【[Spring](https://spring.io)】官网
+
+```markdown
+# GitHub地址
+https://github.com/spring-projects/spring-framework/wiki/Spring-Framework-Versions
+```
+
+## 【阿里云】官网
+
+```tex
+https://www.aliyun.com
+```
+
+### # 帮助文档
+
+```tex
+https://help.aliyun.com
+```
+
+### # 控制台首页
+
+```tex
+https://homenew.console.aliyun.com
+```
+
+### 	# 达摩院 → 人脸人体识别
+
+```tex
+https://vision.aliyun.com/facebody
+```
+
+#### *人脸检测与五官定位
+
+```tex
+https://help.aliyun.com/document_detail/155519.html
+```
+
+#### *人脸人体计费介绍
+
+```tex
+https://help.aliyun.com/document_detail/184049.html
+```
+
+### # 视频点播
+
+```tex
+https://vod.console.aliyun.com/
+```
+
+#### *视频点播帮助文档
+
+```tex
+https://help.aliyun.com/product/29932.html
+```
+
+### 	# 对象存储 OSS
+
+```tex
+https://www.aliyun.com/product/oss
+```
+
+#### *OSS管理控制台
+
+```tex
+https://oss.console.aliyun.com
+```
+
+### 	# RAM访问控制
+
+```tex
+https://ram.console.aliyun.com
+```
+
+### 	# 容器镜像服务
+
+```tex
+https://cr.console.aliyun.com/cn-hangzhou/instances
+```
+
+### 	# 镜像加速器
+
+```tex
+https://cr.console.aliyun.com/cn-hangzhou/instances/mirrors
+```
+
+### 	# 阿里云短信服务
+
+```tex
+https://dysms.console.aliyun.com
+```
+
+### # 账号密码
+
+```markdown
+登录方式1：
+	用户名：casualwei
+	密码：what.0414
+登录方式2：
+    账号：2244255266@qq.com
+    密码：what.0414
+登录方式3：
+	支付宝授权登录
+```
+
+注意：个人版容器镜像服务在 → 新版网站中
+
+![image-20210307110036012](../imgs/01/Website/Aliyun/image-20210307110036012.png)
+
+![image-20210307110716445](../imgs/01/Website/Aliyun/image-20210307110716445.png)
+
+## 【七牛云】官网
+
+```tex
+https://www.qiniu.com
+```
+
+### # 对象存储 Kodo
+
+```tex
+https://www.qiniu.com/products/kodo
+```
+
+### # 账号密码
+
+```markdown
+登录方式1：
+    账号：2244255266@qq.com
+    密码：what.0414
+登录方式2：
+	手机号：18790475656
+	密码：what.0414
+```
+
+## 【百度智能云】官网
+
+```tex
+https://cloud.baidu.com
+```
+
+### # 对象存储 BOS
+
+```tex
+https://cloud.baidu.com/product/bos.html
+```
+
+## 【[环信](https://www.easemob.com)】及时通讯
+
+```markdown
+# 注册平台
+https://datayi.cn/w/woVL50vR
+
+# 获取管理员权限token
+https://docs-im.easemob.com/im/server/ready/user#%E8%8E%B7%E5%8F%96%E7%AE%A1%E7%90%86%E5%91%98%E6%9D%83%E9%99%90token
+
+# 用户管理
+https://docs-im.easemob.com/im/server/ready/user#%E7%94%A8%E6%88%B7%E7%AE%A1%E7%90%86
+```
+
+## 【虹软】人脸人体识别
+
+```tex
+https://www.arcsoft.com.cn
+```
+
+# 开发平台
+
+## 【代码生成】网址
+
+### # [低代码快速开发平台](https://zhuanlan.zhihu.com/p/616402599)
+
+```tex
+1) OPSLI 快速开发平台
+官网: 
+https://opsli.com
+开源地址: 
+https://github.com/hiparker/opsli-boot
+
+2) Jfinal快速开发平台
+https://jfinal.com
+
+3) Jeecg 快速开发平台
+官网: 
+http://www.jeecg.com
+开源地址: 
+https://github.com/zhangdaiscott/jeecg-boot
+
+4) RuoYi 低代码开发平台
+官网:
+http://www.ruoyi.vip
+开源地址: 
+https://gitee.com/y_project/RuoYi-Vue
+```
+
+### # mybatis-plus-generator
+
+```markdown
+# 登录mp官网
+快速开始 → 核心功能 → 代码生成器
+```
+
+## 【[微信公众平台](https://mp.weixin.qq.com)】官网
+
+```markdown
+# 公众号-AppID
+设置与开发 | 开发接口管理 | 基本配置 → 账号开发信息 → 开发者ID(AppID)
+# 小程序-AppID
+开发与服务 | 开发管理 → 开发设置 → 开发者ID
+
+# 微信开发工具
+https://developers.weixin.qq.com/miniprogram/dev/devtools/devtools.html
+https://developers.weixin.qq.com/miniprogram/dev/devtools/download.html
+```
+
+# 操作系统
 
 ## 【[CentOS](https://www.centos.org)】官网
 
@@ -1752,144 +2088,7 @@ https://blog.csdn.net/weixin_44295084/article/details/125725574
 https://hub.docker.com
 ```
 
-## 【[nginx](https://nginx.org)】官网
-
-```markdown
-# 下载地址
-https://nginx.org/en/download.html
-
-# 下载解压
-wget -P /opt https://nginx.org/download/nginx-1.26.0.tar.gz
-tar -zxvf nginx-1.26.0.tar.gz
-
-# 安装(CentOS)
-yum install pcre pcre-devel
-/opt/nginx-1.26.0/./configure --help
-/opt/nginx-1.26.0/./configure --prefix=/home/nginx
-make
-make install
-/home/nginx/sbin/./nginx -v
-/home/nginx/sbin/./nginx -t
-
-# 开启
-/home/nginx/sbin/./nginx
-
-# 关闭
-/home/nginx/sbin/./nginx -s quit
-```
-
-## 【[Google](https://www.google.com)】官网
-
-### # 相关产品
-
-```markdown
-https://about.google/products
-```
-
-### # [Gradle](https://gradle.org)
-
-```markdown
-# 往期版本
-https://gradle.org/releases
-
-# 官方推荐版本 gradle-6.9.2-all.zip
-https://services.gradle.org/distributions
-
-# 国内镜像
-https://mirrors.cloud.tencent.com/gradle
-https://mirrors.aliyun.com/gradle
-```
-
-#### * Spring源码下载与编译
-
-```markdown
-# 参考网址
-https://blog.csdn.net/IAIMY/article/details/128455277
-https://blog.csdn.net/weixin_45031612/article/details/125590396
-
-# 源码地址
-https://gitee.com/dadudu1024/spring-framework-5.3.10
-```
-
-#### * Gradle下载库速度过慢
-
-```markdown
-https://blog.csdn.net/qq_45297578/article/details/119053164
-https://blog.csdn.net/qq_22744093/article/details/132755350
-```
-
-编辑系统环境变量
-
-```tex
-变量名  GRADLE_USER_HOME            (固定写法)
-变量值  E:\DevDoc\maven\repository  (Maven本地仓库地址)
-```
-
-修改 gradle-wrapper.properties 文件
-
-```properties
-distributionBase=GRADLE_USER_HOME
-distributionPath=wrapper/dists
-#distributionUrl=https\://services.gradle.org/distributions/gradle-6.9.2-bin.zip
-distributionUrl=https\://mirrors.cloud.tencent.com/gradle/gradle-6.9.2-bin.zip
-#distributionUrl=file:///E:/DevDoc/aaa_packages/gradle-6.9.2-all.zip
-zipStoreBase=GRADLE_USER_HOME
-zipStorePath=wrapper/dists
-```
-
-使用国内镜像站点
-
-```groovy
-// build.gradle
-repositories {
-	mavenLocal() // 指定使用maven本地仓库，而本地仓库在配置maven时setting文件指定的仓库位置
-	maven { url "https://maven.aliyun.com/repository/public" } // 阿里云镜像
-	maven { url "https://maven.aliyun.com/repository/central" }
-	mavenCentral() // 这是Maven的中央仓库，无需配置，直接声明就可以使用
-	maven { url "https://repo.spring.io/libs-spring-framework-build" }
-}
-
-// settings.gradle
-repositories {
-    maven { url "https://maven.aliyun.com/repository/public" } // 阿里云镜像
-    maven { url "https://maven.aliyun.com/repository/central" }
-    gradlePluginPortal()
-    maven { url 'https://repo.spring.io/plugins-release' }
-}
-```
-
-增加Gradle的[线程数]或者[连接超时时间]
-
-```properties
-# gradle.properties
-version=5.3.10-SNAPSHOT
-org.gradle.jvmargs=-Xmx1536m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -noverify -Dfile.encoding=UTF-8 -Duser.country=CN -Duser.language=zh -Duser.variant
-org.gradle.caching=true
-org.gradle.parallel=true
-kotlin.stdlib.default.dependency=false
-```
-
-## 【[Spring](https://spring.io)】官网
-
-```markdown
-# GitHub地址
-https://github.com/spring-projects/spring-framework/wiki/Spring-Framework-Versions
-```
-
-## 【FreeMarker】官网
-
-```tex
-英文官网：
-	https://freemarker.apache.org
-中文官网：
-	http://freemarker.foofun.cn
-```
-
-### # 模板 + 数据模型 = 输出
-
-```tex
-http://freemarker.foofun.cn/dgui_quickstart_basics.html
-```
+# 后台开发
 
 ## 【C/C++】编译器
 
@@ -2275,189 +2474,7 @@ https://jdk.java.net
 参考JDK
 ```
 
-## 【阿里云】官网
-
-```tex
-https://www.aliyun.com
-```
-
-### # 帮助文档
-
-```tex
-https://help.aliyun.com
-```
-
-### # 控制台首页
-
-```tex
-https://homenew.console.aliyun.com
-```
-
-### 	# 达摩院 → 人脸人体识别
-
-```tex
-https://vision.aliyun.com/facebody
-```
-
-#### *人脸检测与五官定位
-
-```tex
-https://help.aliyun.com/document_detail/155519.html
-```
-
-#### *人脸人体计费介绍
-
-```tex
-https://help.aliyun.com/document_detail/184049.html
-```
-
-### # 视频点播
-
-```tex
-https://vod.console.aliyun.com/
-```
-
-#### *视频点播帮助文档
-
-```tex
-https://help.aliyun.com/product/29932.html
-```
-
-### 	# 对象存储 OSS
-
-```tex
-https://www.aliyun.com/product/oss
-```
-
-#### *OSS管理控制台
-
-```tex
-https://oss.console.aliyun.com
-```
-
-### 	# RAM访问控制
-
-```tex
-https://ram.console.aliyun.com
-```
-
-### 	# 容器镜像服务
-
-```tex
-https://cr.console.aliyun.com/cn-hangzhou/instances
-```
-
-### 	# 镜像加速器
-
-```tex
-https://cr.console.aliyun.com/cn-hangzhou/instances/mirrors
-```
-
-### 	# 阿里云短信服务
-
-```tex
-https://dysms.console.aliyun.com
-```
-
-### # 账号密码
-
-```markdown
-登录方式1：
-	用户名：casualwei
-	密码：what.0414
-登录方式2：
-    账号：2244255266@qq.com
-    密码：what.0414
-登录方式3：
-	支付宝授权登录
-```
-
-注意：个人版容器镜像服务在 → 新版网站中
-
-![image-20210307110036012](../imgs/01/Website/Aliyun/image-20210307110036012.png)
-
-![image-20210307110716445](../imgs/01/Website/Aliyun/image-20210307110716445.png)
-
-## 【七牛云】官网
-
-```tex
-https://www.qiniu.com
-```
-
-### # 对象存储 Kodo
-
-```tex
-https://www.qiniu.com/products/kodo
-```
-
-### # 账号密码
-
-```markdown
-登录方式1：
-    账号：2244255266@qq.com
-    密码：what.0414
-登录方式2：
-	手机号：18790475656
-	密码：what.0414
-```
-
-## 【百度智能云】官网
-
-```tex
-https://cloud.baidu.com
-```
-
-### # 对象存储 BOS
-
-```tex
-https://cloud.baidu.com/product/bos.html
-```
-
-## 【Mybatis】官网
-
-```tex
-https://mybatis.org/mybatis-3
-```
-
-## 【MybatisPlus】官网
-
-```tex
-https://baomidou.com
-```
-
-## 【代码生成】网址
-
-### # [低代码快速开发平台](https://zhuanlan.zhihu.com/p/616402599)
-
-```tex
-1) OPSLI 快速开发平台
-官网: 
-https://opsli.com
-开源地址: 
-https://github.com/hiparker/opsli-boot
-
-2) Jfinal快速开发平台
-https://jfinal.com
-
-3) Jeecg 快速开发平台
-官网: 
-http://www.jeecg.com
-开源地址: 
-https://github.com/zhangdaiscott/jeecg-boot
-
-4) RuoYi 低代码开发平台
-官网:
-http://www.ruoyi.vip
-开源地址: 
-https://gitee.com/y_project/RuoYi-Vue
-```
-
-### # mybatis-plus-generator
-
-```markdown
-# 登录mp官网
-快速开始 → 核心功能 → 代码生成器
-```
+# 数据开发
 
 ## 【[MySQL](https://www.mysql.com)】官网
 
@@ -2497,11 +2514,17 @@ https://blog.csdn.net/m0_56044033/article/details/128387382
 https://www.cnblogs.com/hg-blogs/p/16618375.html
 ```
 
-## 【[Redis](https://redis.io)】官网
-
-### # 下载地址
+## 【[PostgreSQL](https://www.postgresql.org)】官网
 
 ```markdown
+# 下载地址
+https://www.postgresql.org/download
+```
+
+## 【[Redis](https://redis.io)】官网
+
+```markdown
+# 下载地址
 https://redis.io/download
 ```
 
@@ -2524,18 +2547,6 @@ https://blog.csdn.net/m0_67394002/article/details/123678866
 https://github.com/qishibo/AnotherRedisDesktopManager
 ```
 
-## 【Redisson】网址
-
-```tex
-https://github.com/redisson/redisson/wiki
-```
-
-## 【Lucene】官网
-
-```tex
-https://lucene.apache.org
-```
-
 ## 【[MongoDB](https://www.mongodb.com)】官网
 
 ```markdown
@@ -2549,7 +2560,7 @@ https://www.mongodb.com/try/download/shell
 https://www.mongodb.com/try/download/compass
 ```
 
-## 【[Elastic](https://www.elastic.co)】官网
+## 【[Elasticsearch](https://www.elastic.co)】官网
 
 ```markdown
 # 语言客户端
@@ -2559,37 +2570,14 @@ https://www.elastic.co/guide/en/elasticsearch/client/index.html
 https://www.elastic.co/guide/en/elasticsearch/reference/current/index.html
 ```
 
-## 【IK分词器】地址
+### # IK分词器
 
-```tex
+```markdown
+# 地址
 https://github.com/medcl/elasticsearch-analysis-ik
 ```
 
-## 【Hutool】JAVA工具包
-
-```tex
-https://hutool.cn
-```
-
-## 【MapStruct】官网
-
-```tex
-https://mapstruct.org
-```
-
-## 【JWT】Token认证
-
-​	JWT → JSON-Web-Token
-
-```tex
-https://jwt.io
-```
-
-## 【虹软】人脸人体识别网站
-
-```tex
-https://www.arcsoft.com.cn
-```
+# 框架应用
 
 ## 【seata】官网
 
@@ -2602,6 +2590,20 @@ https://seata.io/zh-cn
 ```tex
 https://seata.io/zh-cn/docs/overview/what-is-seata.html
 ```
+
+## 【Mybatis】官网
+
+```tex
+https://mybatis.org/mybatis-3
+```
+
+## 【MybatisPlus】官网
+
+```tex
+https://baomidou.com
+```
+
+# 组件应用
 
 ## 【[RabbitMQ](https://www.rabbitmq.com)】消息队列
 
@@ -2686,74 +2688,75 @@ https://zookeeper.apache.org/releases.html
 https://dlcdn.apache.org/zookeeper/zookeeper-3.8.4/apache-zookeeper-3.8.4-bin.tar.gz
 ```
 
-## 【[环信](https://www.easemob.com)】及时通讯
+# 工具应用
 
-```markdown
-# 注册平台
-https://datayi.cn/w/woVL50vR
-
-# 获取管理员权限token
-https://docs-im.easemob.com/im/server/ready/user#%E8%8E%B7%E5%8F%96%E7%AE%A1%E7%90%86%E5%91%98%E6%9D%83%E9%99%90token
-
-# 用户管理
-https://docs-im.easemob.com/im/server/ready/user#%E7%94%A8%E6%88%B7%E7%AE%A1%E7%90%86
-```
-
-## 【Nexus】仓库管理
-
-```markdown
-# 3.x 版本
-https://www.sonatype.com/products/sonatype-nexus-oss-download
-
-# 2.x 版本
-https://help.sonatype.com/repomanager2/download
-
-自定义私服网址
-http://localhost:8888/nexus
-```
-
-## 【接口管理】网址
-
-### 【ShowDoc】管理工具
+## 【Redisson】网址
 
 ```tex
-https://www.showdoc.com.cn
+https://github.com/redisson/redisson/wiki
 ```
 
-### 【Swagger】管理平台
+### # Lucene
 
 ```markdown
 # 官网
-https://swagger.io
-
-# 参考文档
-http://springfox.github.io/springfox/docs/current
+https://lucene.apache.org
 ```
 
-### 【YApi】管理平台
+## 【MapStruct】官网
+
+```tex
+https://mapstruct.org
+```
+
+## 【JWT】Token认证
+
+​	JWT → JSON-Web-Token
+
+```tex
+https://jwt.io
+```
+
+## 【Hutool】JAVA工具包
+
+```tex
+https://hutool.cn
+```
+
+# 前端开发
+
+## 【[nginx](https://nginx.org)】官网
 
 ```markdown
-# Git网址
-https://hellosean1025.github.io/yapi
+# 下载地址
+https://nginx.org/en/download.html
 
-项目一
-https://hellosean1025.github.io/yapi/index.html
+# 下载解压
+wget -P /opt https://nginx.org/download/nginx-1.26.0.tar.gz
+tar -zxvf nginx-1.26.0.tar.gz
+
+# 安装(CentOS)
+yum install pcre pcre-devel
+/opt/nginx-1.26.0/./configure --help
+/opt/nginx-1.26.0/./configure --prefix=/home/nginx
+make
+make install
+/home/nginx/sbin/./nginx -v
+/home/nginx/sbin/./nginx -t
+
+# 开启
+/home/nginx/sbin/./nginx
+
+# 关闭
+/home/nginx/sbin/./nginx -s quit
 ```
 
-## 【[微信公众平台](https://mp.weixin.qq.com)】官网
+## 【[JavaScript](https://www.javascript.com)】官网
 
 ```markdown
-# 公众号-AppID
-设置与开发 | 开发接口管理 | 基本配置 → 账号开发信息 → 开发者ID(AppID)
-# 小程序-AppID
-开发与服务 | 开发管理 → 开发设置 → 开发者ID
-
-# 微信开发工具
-https://developers.weixin.qq.com/miniprogram/dev/devtools/devtools.html
-https://developers.weixin.qq.com/miniprogram/dev/devtools/download.html
+# 基础学习
+https://www.javascript.com/learn/strings
 ```
-
-# Web开发
 
 ## 【[jQuery](https://jquery.com)】官网
 
@@ -2765,6 +2768,16 @@ https://jquery.com/download
 https://code.jquery.com
 https://releases.jquery.com
 https://releases.jquery.com/jquery
+```
+
+## 【[TypeScript](https://www.typescriptlang.org)】官网
+
+```markdown
+# 下载地址
+https://www.typescriptlang.org/download
+
+# 文档介绍
+https://www.typescriptlang.org/docs
 ```
 
 ## 【[Node.js](https://nodejs.org/en)】官网
@@ -3327,6 +3340,34 @@ https://element.eleme.cn/#/zh-CN
 
 ```tex
 http://www.bejson.com
+```
+
+# 接口管理
+
+## 【ShowDoc】管理工具
+
+```tex
+https://www.showdoc.com.cn
+```
+
+## 【Swagger】管理平台
+
+```markdown
+# 官网
+https://swagger.io
+
+# 参考文档
+http://springfox.github.io/springfox/docs/current
+```
+
+## 【YApi】管理平台
+
+```markdown
+# Git网址
+https://hellosean1025.github.io/yapi
+
+项目一
+https://hellosean1025.github.io/yapi/index.html
 ```
 
 # 镜像/资源
