--- a/应用文档/01_工具网站/常用工具.md
+++ b/应用文档/01_工具网站/常用工具.md
@@ -3267,7 +3267,7 @@ debug断点 → 展开 Scope
 注：该方式仅查看事件，不参与调试
 ```
 
-#### * 监听[变量/方法]
+#### * 监听[方法/变量]
 
 ##### 方法1
 
@@ -3290,6 +3290,38 @@ debug断点 → 展开 Scope
 
 ![image-20221201142112522](../imgs/01/Tools/Chrome/image-20221201142112522.png)
 
+#### * 定位[事件方法]
+
+```markdown
+# 方法一(推荐)
+在 [Sources] → [Ctrl + Shift + F] 全局搜索 [选择器名] (如：ke_ksql_query) → 按下 [Enter]
+                                                                      → 点击 [对应js文件] 下的 [对应行代码]
+
+# 方法二(推荐)
+在 [Elements] → [Ctrl + F] 搜索 [选择器名] (如：ke_ksql_query) → 点击 [Event Listeners]
+                                                            → 选择 [想要监听的事件] (如：click)
+                                                            → 点击 [对应js文件] (如：ksql.js?v=3.0.0)
+
+# 方法三（不推荐）
+在 [Console] 执行以下代码
+getEventListeners(document.getElementById('ke_ksql_query'))
+  → 如果该按钮绑定了事件，会输出一个对象
+  → 其中 click 属性下是绑定的函数，可以点击这个函数，跳转到其源码位置
+
+# 方法四（不推荐）
+临时拦截点击行为(调试 hook) 执行以下代码
+document.getElementById('ke_ksql_query').onclick = function () {
+    debugger;
+}
+  → 出发事件时自动中断，进入断点调试模式
+  → 可以往上追踪调用栈，找到原始方法
+  → 想取消这个调试用的函数，重新刷新页面
+```
+
+![image-20250806155939107](../imgs/01/Tools/Chrome/image-20250806155939107.png)
+
+![image-20250806150452860](../imgs/01/Tools/Chrome/image-20250806150452860.png)
+
 #### * 控制台打印
 
 ##### 方法1
@@ -3311,7 +3343,7 @@ F12 → 点击 Console 选项 → 输入[变量/方法] → Enter
 打开调试窗口 → [Ctrl + P] → 输入js文件名(如文件名：merge-owlist-js.js) → 选择所需路径的文件
 ```
 
-#### * 定位文件的[变量/方法]
+#### * 查询文件的[变量/方法]
 
 ```tex
 打开一个js文件 → [Ctrl + Shift + O] → 输入[变量/方法]名(如函数名：warpCallback) → 选择所需方法
@@ -3380,7 +3412,14 @@ https://blog.csdn.net/weixin_44786530/article/details/130263725
 [光标放在搜索框时显示为白色，导致无法看清](https://blog.csdn.net/qq_46365857/article/details/129791080)
 
 ```tex
-设置 → 系统 → 关闭[使用硬件加速模式（如果可用）] → 重启
+设置 → 系统 → 关闭[使用硬件加速模式(如果可用)] → 重启
+```
+
+console
+
+```markdown
+# Warning: Don’t paste code into the DevTools Console ... Please type ‘allow pasting’ below and press Enter to allow pasting.
+在控制台输入 → allow pasting → 然后即可粘贴代码
 ```
 
 ## 【Firefox】
