--- a/应用文档/01_工具网站/常用网站.md
+++ b/应用文档/01_工具网站/常用网站.md
@@ -490,24 +490,6 @@ eclipse.ini文件，在文件的最后添加指令：
 -Dhttps.protocols=TLSv1,TLSv1.1,TLSv1.2
 ```
 
-## 【[GitLab](https://gitlab.com)】官网
-
-### # 账号密码
-
-```markdown
-邮箱：outtaame@gmail.com
-用户名：viskixin
-密码：what.0414
-```
-
-### # 同步GitHub
-
-```markdown
-点击➕ → New project/repository → Import project
-```
-
-![image-20250418141351745](../imgs/01/Website/Git/GitLab/image-20250418141351745.png)
-
 ## 【[Gitee](https://gitee.com)】官网
 
 ### # 账号密码
@@ -587,7 +569,8 @@ Gitee 与本地的 Git 分支为 master
 
 ```markdown
 邮箱：2244255266@qq.com
-用户名：qq_41519754
+手机号：18790475656
+用户名：innovim
 密码：Simple.0121
 ```
 
@@ -606,6 +589,24 @@ git remote set-url origin https://qq_41519754:fxW14yxZaqWmRTdrLWy_8Jfb@gitcode.c
 # 不想每次输入 Token，可以配置 Git 凭据存储
 git config --global credential.helper store
 ```
+
+## 【[GitLab](https://gitlab.com)】官网
+
+### # 账号密码
+
+```markdown
+邮箱：outtaame@gmail.com
+用户名：viskixin
+密码：what.0414
+```
+
+### # 同步GitHub
+
+```markdown
+点击➕ → New project/repository → Import project
+```
+
+![image-20250418141351745](../imgs/01/Website/Git/GitLab/image-20250418141351745.png)
 
 ## 【[TortoiseSVN](https://tortoisesvn.net)】官网
 
@@ -869,7 +870,7 @@ https://freemarker.apache.org
 http://freemarker.foofun.cn
 ```
 
-#### # 模板 + 数据模型 = 输出
+#### * 模板 + 数据模型 = 输出
 
 ```tex
 http://freemarker.foofun.cn/dgui_quickstart_basics.html
@@ -882,6 +883,13 @@ http://freemarker.foofun.cn/dgui_quickstart_basics.html
 https://kafka.apache.org/downloads
 # 往期版本
 https://sna-projects.com/kafka/downloads.php
+```
+
+#### * [kafka-Eagle](https://www.kafka-eagle.org) 可视化工具
+
+```markdown
+# GitHub资源
+https://github.com/smartloli/kafka-eagle-bin/tags
 ```
 
 ### # [ShardingSphere](https://shardingsphere.apache.org/)
