--- a/账密文档/账户及密码.md
+++ b/账密文档/账户及密码.md
@@ -480,24 +480,21 @@ what.0414
 
 ## [GitHub](https://github.com)
 
-```markdown
+```makefile
+# 仓库1
 https://github.com/viskixin/MainDoc.git
-# 账密文档
- -- [账户及密码.md]  →  登录、验证
-# 应用文档
-/* 01_工具网站 */
- -- [常用工具.md]  →  开发工具、浏览器
- -- [常用网站.md]  →  开发网站、VPN
+-- 账密文档
+   [账户及密码.md]	→	登录、验证
+-- 应用文档 | 01_工具网站
+   [常用工具.md]	→	开发工具、浏览器
+   [常用网站.md]	→	开发网站、VPN
 
+# 仓库2
 https://github.com/viskixin/DevSpace.git
- -- [IdeaDoc]  →  Java文件
-```
-
-## [GitLab](https://gitlab.com)
-
-```markdown
-https://gitlab.com/viskixin/MainDoc.git
-https://gitlab.com/viskixin/DevSpace.git
+-- IdeaDoc
+   [IdeaDaily]		→	Java日常收集
+   [IdeaProjects]	→	Java项目实践
+   [tuling]			→	Java学习项目
 ```
 
 ## [Gitee](https://gitee.com)
@@ -505,6 +502,21 @@ https://gitlab.com/viskixin/DevSpace.git
 ```markdown
 https://gitee.com/simpleway/MainDoc.git
 https://gitee.com/simpleway/DevSpace.git
+```
+
+## Gitea
+
+```makefile
+# 仓库
+https://gitea.com/outta/AnnoMark.git
+-- Character
+   [xxx.docx]	→	注文、标记
+```
+
+## GitCode
+
+```markdown
+https://gitcode.com/innovim/AnnoMark.git
 ```
 
 ## [Git操作](../应用文档/01_工具网站/常用网站.md/## 分支操作)
