--- a/账密文档/账户及密码.md
+++ b/账密文档/账户及密码.md
@@ -171,20 +171,20 @@ Windows 11 家庭中文版
 NF3C7-QJCH4-XMB9G-HT9HK-HCFJX
 ```
 
-## # NVIDIA
+## # [NVIDIA](https://www.nvidia.com/en-us/account)
 
 ```markdown
+# 中文官网
+https://www.nvidia.cn/account
 # 邮箱
 2244255266@qq.com
 # 密码
 Xw.2244255266
 ```
 
-## # 雷蛇账户
+## # [雷蛇账户](https://razerid.razer.com)
 
 ```markdown
-# 官网
-https://razerid.razer.com
 # Razer ID
 weiskey
 # 密码
