--- a/应用文档/01_工具网站/常用工具.md
+++ b/应用文档/01_工具网站/常用工具.md
@@ -675,7 +675,8 @@ IDEA highlighting level → All Problems	检查所有error/warning
 -- C:\Users\Viski\AppData\Local\JetBrains
 
 # Condition 记录 (随机字符.xml → 可修改断点之后，再按照修改时间倒序查看)
-%APPDATA%\JetBrains\IntelliJIdea2024.3\workspace → xxx.xml
+%APPDATA%\JetBrains\IntelliJIdeaxxxx.x\workspace  →  xxx.xml
+-- C:\Users\Viski\AppData\Roaming\JetBrains\IntelliJIdea2024.3\workspace  →  xxx.xml
 ```
 
 ### # IDEA-插件
@@ -685,7 +686,9 @@ IDEA highlighting level → All Problems	检查所有error/warning
 ```markdown
 # 安装目录
 %LocalAppData%\JetBrains
-                          →  IntelliJIdeaxxxx.x\plugins
+或
+%UserProfile%\AppData\Local\JetBrains
+                                       →  IntelliJIdeaxxxx.x\plugins
 ```
 
 #### * Plugins 安装
