--- a/应用文档/02_问题收集/日常小结.md
+++ b/应用文档/02_问题收集/日常小结.md
@@ -6223,8 +6223,11 @@ Get-Host | Select-Object Version
 
 #### 当前会话
 
-```tex
-同上
+```markdown
+# 默认为[GBK]编码
+chcp 936
+# 设置[UTF8]
+chcp 65001
 ```
 
 #### 永久生效(不推荐)
@@ -6436,8 +6439,14 @@ netsh winsock reset
 ## 文件垃圾
 
 ```markdown
-# IDEA 服务文件 (可删除之前的版本)
-%UserProfile%\AppData\Local\JetBrains → IntelliJIdeaxxx.x
+# 系统[临时文件]
+%temp%
+
+# NVIDIA
+-- 删除里面的所有子文件夹和 .exe 安装文件
+C:\ProgramData\NVIDIA Corporation\Downloader
+-- 只保留最新时间的文件夹，其他删除
+C:\Program Files\NVIDIA Corporation\Installer2
 ```
 
 # Linux
