--- a/应用文档/01_工具网站/常用网站.md
+++ b/应用文档/01_工具网站/常用网站.md
@@ -210,6 +210,11 @@ git commit -m "提交的描述信息"
   -- 如果文件处于已跟踪但未暂存的状态，使用 git commit -am 可以直接提交，无需再使用 git add 命令
 git commit -am "提交的描述信息"
 
+# 修改提交的描述信息(如果这次提交还没有推送到远程)
+git commit --amend -m "Y2025M08D18"
+# 强制推送覆盖远程(如果这次提交已经推送到远程)
+git push --force
+
 # 注意
 git commit -am 并不能完全替代 git add 命令；对于新添加到版本控制中的文件，或者之前未跟踪过的文件，必须先使用 git add 将它们添加到暂存区，然后才能使用 git commit 进行提交
 ```
@@ -265,8 +270,13 @@ git log --oneline
 f2929c3 Y2024M12D26_V2
 3af1d73 Y2024M12D26_V1
 
-2) 回滚到 Y2024M12D26_V2 提交，并删除 Y2024M12D26_V3 的更改记录
+2) 回滚到 Y2024M12D26_V2
+-- 删除[Y2024M12D26_V3]文件的[更改状态] => [工作区]、[暂存区]的[文件内容]都恢复到[Y2024M12D26_V2]的[状态]
 git reset --hard f2929c3
+-- 保持[Y2024M12D26_V3]文件的[更改状态] => 保留[工作区]、[暂存区]文件
+git reset --soft f2929c3
+-- 保持[Y2024M12D26_V3]文件的[更改状态] => 保留[工作区]文件，清空[暂存区]文件，需要重新 git add 再提交
+git reset --mixed f2929c3
 
 3) 强制推送到远程仓库(若要覆盖远程分支历史，需要使用 --force 参数强制推送)
 git push origin <branch-name> --force
