--- a/应用文档/01_工具网站/常用工具.md
+++ b/应用文档/01_工具网站/常用工具.md
@@ -674,7 +674,9 @@ IDEA highlighting level → All Problems	检查所有error/warning
 %LOCALAPPDATA%\JetBrains
 -- C:\Users\Viski\AppData\Local\JetBrains
 
-# Condition 记录 (随机字符.xml → 可修改断点之后，再按照修改时间倒序查看)
+# 随机字符.xml(可修改断点之后，再按照修改时间倒序查看)
+  搜索记录(FindInProjectRecents)
+  断点记录(debuggerHistoryManager) → 随机字符.xml(可修改断点之后，再按照修改时间倒序查看)
 %APPDATA%\JetBrains\IntelliJIdeaxxxx.x\workspace  →  xxx.xml
 -- C:\Users\Viski\AppData\Roaming\JetBrains\IntelliJIdea2024.3\workspace  →  xxx.xml
 ```
@@ -1634,9 +1636,11 @@ File | Settings | Version Control | Git → 勾选 Execute branch operations on 
 
 #### * 回退已提交代码
 
-场景：有 develop、newbran 两个分支；[想提交]到[develop]，却[提交错]到了[newbran]
-
 ```markdown
+# 场景
+有 develop、newbran 两个分支
+[想提交]到[develop]，却[提交错]到了[newbran]
+
 # 若只进行了[Commit]，没有[Push]
 直接右击[提交日志]，点击[Undo Commit]，即可[撤回]
 ```
@@ -1649,8 +1653,8 @@ File | Settings | Version Control | Git → 勾选 Execute branch operations on 
 2) 右击[newbran]，点击[Push] → [提交]回退代码
 3) 右击[intent to dev] → 点击[Cherry-Pick]
 4) 右击[最新 intent to dev] → 点击[Undo Commit]，撤销[Commit]
-5) 右击[项目] → 点击[Git] → [Stash Changes] → [Create Stash]
-6) 切换到[develop]分支 → 点击[Git] → [Unstash Changes] → 选择[刚才创建的 Stash] → [Apply]
+5) 右击[项目] → 点击[Git] → [Stash Changes] → Message: [to dev] → [Create Stash]
+6) 切换到[develop]分支 → 点击[Git] → [Unstash Changes] → 选择刚才创建的[Stash(to dev)] → [Apply]
 ```
 
 ![image-20240826175429051](../imgs/01/Tools/IDEA/image-20240826175429051.png)
