--- a/账密文档/账户及密码.md
+++ b/账密文档/账户及密码.md
@@ -73,7 +73,7 @@ outta_touch@163.com/18790475656
 what.0414
 
 # 账密2
-xw1770282632
+xw1770282632@163.com
 what.0414
 ```
 
@@ -492,9 +492,9 @@ https://github.com/viskixin/MainDoc.git
 # 仓库2
 https://github.com/viskixin/DevSpace.git
 -- IdeaDoc
-   [IdeaDaily]		→	Java日常收集
-   [IdeaProjects]	→	Java项目实践
-   [tuling]			→	Java学习项目
+   [IdeaDaily]		→	Java日常练习
+   [IdeaProjects]	→	Java项目练习
+   [tuling]			→	Java项目学习
 ```
 
 ## [Gitee](https://gitee.com)
